     at compile time.  for the old behavior of "aliasing" bind parameters
     with conflicting names, specify "unique=True" - this option is
     still used internally for all the auto-genererated (value-based) 
     bind parameters.    
    
    - slightly better support for bind params as column clauses, either
    via bindparam() or via literal(), i.e. select([literal('foo')])
    
    - exists() becomes useable as a standalone selectable, not just in a 
    WHERE clause, i.e. exists([columns], criterion).select()

    - correlated subqueries work inside of ORDER BY, GROUP BY

    - fixed function execution with explicit connections, i.e. 
    conn.execute(func.dosomething())

    - use_labels flag on select() wont auto-create labels for literal text
      column elements, since we can make no assumptions about the text. to
      create labels for literal columns, you can say "somecol AS somelabel",
      or use literal_column("somecol").label("somelabel")

    - quoting wont occur for literal columns when they are "proxied" into the
    column collection for their selectable (is_literal flag is propigated).
    literal columns are specified via literal_column("somestring").

    - added "fold_equivalents" boolean argument to Join.select(), which removes
    'duplicate' columns from the resulting column clause that are known to be 
    equivalent based on the join condition.  this is of great usage when 
    constructing subqueries of joins which Postgres complains about if 
    duplicate column names are present.

    - fixed use_alter flag on ForeignKeyConstraint [ticket:503]

    - fixed usage of 2.4-only "reversed" in topological.py [ticket:506]

    - for hackers, refactored the "visitor" system of ClauseElement and
    SchemaItem so that the traversal of items is controlled by the 
    ClauseVisitor itself, using the method visitor.traverse(item).
    accept_visitor() methods can still be called directly but will